# OpenGLFramework

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  config.h.ini  make.bat  make.ps1
assets/shaders/: fragment.glsl  vertex.glsl  vertex.vs
src/: Camera.cpp  Camera.h  GenerateSDF.cpp  Mesh.cpp  Mesh.h  PNGStream.cpp  PNGStream.h  Shader.cpp  Shader.h  config.h  main.cpp
